[package]
name = "kyber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3.1"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
lazy_static = "1.4.0"
libloading = "0.8.3"
openssl = "0.10.64"

